# speculos

./: CMakeLists.txt  default.nix  pyproject.toml  release.nix  setup.py  speculos.py
dep/alamgu/: github.json
dep/ledger-platform/: github.json
mcu/: bagl.py  button_tcp.py  headless.py  screen_text.py  seproxyhal.py
speculos/: main.py
speculos/api/: api.py
speculos/mcu/: button_tcp.py  seproxyhal.py
src/: CMakeLists.txt  cx_ec.c  cx_hash.h  emulate.c  launcher.c
src/bolos/: cx_bls.h
src/vnc/: CMakeLists.txt  default.nix
tests/: CMakeLists.txt
tests/syscalls/: CMakeLists.txt
tools/: debug.sh
